--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,16 @@
+alabaster==0.7.12
+argh==0.26.2
+asn1crypto==1.3.0
+astroid==2.3.3
 click==7.1.2
 Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
+lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 selenium==3.141.0
+six==1.15.0
+typed-ast==1.4.1
 urllib3==1.25.9
 Werkzeug==1.0.1
+wrapt==1.11.2
